# rust

./: .gitignore
.github/workflows/: fetch-solana.yml  train.yml
downloader/: Cargo.toml
downloader/src/: main.rs
ml/: LAST_PROCESSED  train.py
solana-fetcher/: Cargo.toml
solana-fetcher/src/: main.rs
