[package]
name = "solana-fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
jetstreamer = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
bs58 = "0.5"
clickhouse = "0.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
